deliverable two - scaping.py sorted

--- a/Mission_to_Mars.ipynb
+++ b/Mission_to_Mars.ipynb
@@ -340,6 +340,7 @@
     }
    ],
    "source": [
+    "#Mars Facts\n",
     "df = pd.read_html('http://space-facts.com/mars/')[0]\n",
     "df.columns=['description', 'value']\n",
     "df.set_index('description', inplace=True)\n",
@@ -365,6 +366,41 @@
    "source": [
     "df.to_html()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
